2010-04-22  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Say "file name" or "file-name" instead of "filename".

	* ci.1in: Instead of "filename", say "filename" or "file-name".
	* co.1in: Likewise.
	* ident.1in: Likewise.
	* rcs.1in: Likewise.
	* rcsintro.1in: Likewise.
	* rlog.1in: Likewise.

2010-04-19  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Don't say "path" when referring to file names.

	* ci.1in: Instead of "path", say "filename" or
	"frag" or "directory component" or simply "name".
	* co.1in: Likewise.
	* ident.1in: Likewise.
	* rcs.1in: Likewise.
	* rcsclean.1in: Likewise.
	* rcsdiff.1in: Likewise.
	* rcsintro.1in: Likewise.
	* rcsmerge.1in: Likewise.
	* rlog.1in: Likewise.

2010-03-19  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use GNU Automake.

	* Makefile.am: New file.
	* ci.1in: Rename from ci.1.
	* co.1in: Rename from co.1.
	* ident.1in: Rename from ident.1.
	* merge.1in: Rename from merge.1.
	* rcs.1in: Rename from rcs.1.
	* rcsclean.1in: Rename from rcsclean.1.
	* rcsdiff.1in: Rename from rcsdiff.1.
	* rcsfreeze.1in: Rename from rcsfreeze.1.
	* rcsintro.1in: Rename from rcsintro.1.
	* rcsmerge.1in: Rename from rcsmerge.1.
	* rlog.1in: Rename from rlog.1.
	* Makefile.in: Delete file.

2010-03-12  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[man] Include branch names in RCS file diagram.

	* rcsfile.5in <diagram> (branch_name): New function.
	(triangle_up): Display branch name below the split upward bend.

2010-03-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[man] Document rlog -q.

	* rlog.1: Document placebo option `-q'.

2010-03-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move `SENDMAIL' configuration to configure.in.

	* rcs.1 (OPTIONS): Mention that mail-on-lock-break
	only happens if RCS was configured `--with-mailer'.

2010-03-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[man] Improve aesthetic of  labels in rcsfile.5 diagram.

	* rcsfile.5in <diagram> (triangle_down, triangle_up):
	Manually position the text slightly higher and lower, respectively.
