@@ -1,3 +1,9 @@
+2010-04-30  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	Recognize ‘commitid SYMBOL’ in RCS file delta tree.
+
+	* rcsfile.5in (delta): Add optional ‘commitid’ to production.
+
 2010-04-22  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	Say "file name" or "file-name" instead of "filename".
